--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +8,14 @@
 
     <Button
         android:id="@+id/btnConsultar"
-        android:layout_width="wrap_content"
+        android:layout_width="139dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_below="@+id/cmbPaises"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="93dp"
+        android:layout_marginTop="33dp"
         android:onClick="click_Consultar"
         android:text="Consultar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,9 +26,16 @@
         android:id="@+id/imageView"
         android:layout_width="104dp"
         android:layout_height="96dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_toEndOf="@+id/txtTitulo"
+        android:layout_toRightOf="@+id/txtTitulo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toEndOf="@+id/txtTitulo"
@@ -34,9 +46,12 @@
         android:id="@+id/txtTitulo"
         android:layout_width="273dp"
         android:layout_height="58dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="18dp"
         android:fontFamily="monospace"
         android:gravity="center"
         android:text="Actualización de casos de coronavirus"
@@ -49,9 +64,12 @@
         android:id="@+id/textView5"
         android:layout_width="144dp"
         android:layout_height="44dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="248dp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="29dp"
         android:text="Pacientes fallecidos"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,9 +79,12 @@
         android:id="@+id/textView2"
         android:layout_width="143dp"
         android:layout_height="71dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="88dp"
+        android:layout_below="@+id/btnConsultar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="63dp"
         android:text="Casos confirmados con pruebas PCR"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,9 +94,12 @@
         android:id="@+id/textView4"
         android:layout_width="144dp"
         android:layout_height="44dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="180dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="32dp"
         android:text="Pacientes recuperados"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +109,12 @@
         android:id="@+id/txtCasosConfirmados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_below="@+id/btnConsultar"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="87dp"
+        android:layout_toEndOf="@+id/textView2"
+        android:layout_toRightOf="@+id/textView2"
         android:text="       "
         android:textColor="@color/purple_500"
         android:textStyle="bold"
@@ -98,7 +127,12 @@
         android:id="@+id/txtPacientesRecuperados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="192dp"
+        android:layout_below="@+id/txtCasosConfirmados"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="74dp"
+        android:layout_toEndOf="@+id/textView4"
+        android:layout_toRightOf="@+id/textView4"
         android:text="       "
         android:textColor="@color/purple_500"
         android:textStyle="bold"
@@ -111,7 +145,12 @@
         android:id="@+id/txtPacientesFallecidos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="256dp"
+        android:layout_below="@+id/txtPacientesRecuperados"
+        android:layout_marginStart="26dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="55dp"
+        android:layout_toEndOf="@+id/textView5"
+        android:layout_toRightOf="@+id/textView5"
         android:text="       "
         android:textColor="@color/purple_500"
         android:textStyle="bold"
@@ -124,9 +163,16 @@
         android:id="@+id/cmbPaises"
         android:layout_width="272dp"
         android:layout_height="39dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_below="@+id/txtTitulo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/imageView"
+        android:layout_toLeftOf="@+id/imageView"
         android:background="#ECECEC"
         android:spinnerMode="dialog"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -136,7 +182,12 @@
         android:id="@+id/txtPais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_below="@+id/btnConsultar"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="27dp"
+        android:layout_toEndOf="@+id/textView7"
+        android:layout_toRightOf="@+id/textView7"
         android:text="   "
         android:textColor="#12AC18"
         android:textSize="18sp"
@@ -150,12 +201,15 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginTop="28dp"
+        android:layout_below="@+id/btnConsultar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="26dp"
         android:text="Pais"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnConsultar" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
